# ollama-test

./: .gitignore  JwtAuthApi.ipynb  README.md  docker-compose.yml  note.ipynb
app/: .dockerignore  Dockerfile  Untitled.ipynb  auth.py  main-Copy1.py  main-Copy2.py  main-Copy3.py  main-Copy4.py  main.py  pyproject.toml  requirements.txt  tasks-Copy1.py  tasks-Copy2.py  tasks-Copy3.py  tasks.py
app/static/: index-Copy1.html  index.html
iis_api/: Program.cs  RsaKeyService.cs  SimpleFileLogger.cs  UserDataSource.cs  ai001.md  build.bat  memo.txt
test/: Form1.cs  memo01.md
